--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,8 @@
 name: Site Reliability
-on:
-- push:
-  branches:
-  - master
-- schedule:
+on: [push]
+schedule:
   # * is a special character in YAML so you have to quote this string
-  - cron:  '0 4 * * *'
+  - cron:  '0 4 * * *' ]
 jobs:
   crawl_for_broken_links:
     runs-on: ubuntu-latest
