Run site reliability workflow on master branch and 04:00 AM

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,7 @@
 name: Site Reliability
 on: 
   push:
+    branches: master
   schedule:
     # * is a special character in YAML so you have to quote this string
     - cron:  '0 4 * * *'
