--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     name: Broken-Links-Crawler
     steps:
+    - name: Debug Action
+      uses: hmarr/debug-action@v1.0.0
     - name: Checking links
       id: checking
       uses: ScholliYT/Broken-Links-Crawler-Action@v1.1.3
