--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,8 @@
 name: Site Reliability
 on: 
   push:
-    branches: master
+    branches: 
+      - master
   schedule:
     # * is a special character in YAML so you have to quote this string
     - cron:  '0 4 * * *'
