--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,7 +1,11 @@
 name: Publish Docker image
 on:
-  [push]
-
+  push:
+    branches: 
+      - master
+  schedule:
+    # * is a special character in YAML so you have to quote this string
+    - cron:  '30 4 5 * *'
 jobs:
   push_to_github_registry:
     name: Push Docker image to GitHub Packages
